--- a/First.html
+++ b/First.html
@@ -11,10 +11,10 @@
     <div class="container">
         
         <div class="list">
-            <button  class="links">PLAY</button>
-            <button class="links">Login</button>
-            <button class="links">Sign Up</button>
-            <button class="links">High Scores</button>
+            <button onclick="document.location='Play.html'"  class="links">PLAY</button>
+            <button onclick="document.location='Login.html'" class="links">Login</button>
+            <button onclick="document.location='SignUp.html'" class="links">Sign Up</button>
+            <button onclick="document.location='HighScores.html'" class="links">High Scores</button>
 
 
         </div>
