--- a/First.html
+++ b/First.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>XO</title>
     <link rel="stylesheet" href="First.css">
+    <link rel="shortcut icon" href="12.png" type="image/x-icon">
 </head>
 <body>
     <div class="container">
