--- a/SignUp.html
+++ b/SignUp.html
@@ -9,6 +9,31 @@
     <title>SignUp</title>
 </head>
 <body>
+<section class="section2">
+<form>
+	<div class="signup_container">
+		<input type="text" id="name" placeholder="Enter Name" required>
+		<input type="email" id="email" placeholder="Enter Email" name="email" required>
+
+		<input type="password" id="pass" placeholder="Enter Password" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2, 3}$" required>
+
+		<input type="password" id="pass" placeholder="Repeat Password" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2, 3}$" required>
+
+			<span id="remember_forget">
+				<input type="checkbox" checked="" ><label>Remember me </label>
+			</span>	
+
+		<p>By creating an account you agree to our <a href="#" >Terms & Privacy</a>.</p>
+
+		<div class="towbtn">
+		  <button type="button" class="cancel">Cancel</button>
+		  <button type="submit" class="signup">Sign Up</button>
+		</div>
+	
+	</div>
+
+</form>
+</section>
     
 </body>
 </html>
