--- a/HighScores.html
+++ b/HighScores.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="12.png" type="image/x-icon">
     <title>HighScores</title>
 </head>
-<body>
+<body style="background-color:rgb(231, 212, 187);">
     
 </body>
 </html>
