--- a/Login.html
+++ b/Login.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="12.png" type="image/x-icon">
     <title>Login</title>
 </head>
-<body>
+<body style="background-color:rgb(231, 212, 187);">
 <section id="section1">
 	<form>
 		<div class="login_container" >
