--- a/Login.html
+++ b/Login.html
@@ -13,8 +13,8 @@
 	<form>
 		<div class="login_container" >
 			
-			<input type="email" id="myEmail" placeholder="Email:abcd@domain.com" required autocomplete="">
-			<input type="password" id ="myPass" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2, 3}$" placeholder="Password" required="">
+			<input type="email" id="myEmail" placeholder="Email:abcd@domain.com" name="email" required autocomplete>
+			<input type="password" id ="myPass" name="mypass" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2, 3}$" placeholder="Password" required>
 			<span id="remember_forget">
 				<input type="checkbox" id="remember" checked="" ><label>Remember me </label>
 			</span>	
