--- a/Play.html
+++ b/Play.html
@@ -9,6 +9,44 @@
    <title>Play</title>
 </head>
 <body style="background-color:rgb(231, 212, 187);">
-    
+<div class="game_container">
+
+	<header>
+		
+		name:<input type="text" class="myname" value="x">
+		score:<input type="text" class="gameScore" value="0" readonly>
+		win:<input type="text" class="win" value="0" readonly>
+		lose:<input type="text" class="lose" value="0" readonly>
+		<input type="button" class="gameExitBtn" value="Exit">
+	</header>
+	<main class="puzzle">
+		<div class="col 1">
+			
+			<input type="text" class="box one" value="x">
+			<input type="text" class="box tow "value="o">
+			<input type="text" class="box three">
+
+		</div>
+		<div class="col 2"> 
+
+			<input type="text" class="box four">
+			<input type="text" class="box five">
+			<input type="text" class="box six">
+
+		</div>
+		<div class="col 3">
+
+			<input type="text" class="box seven">
+			<input type="text" class="box eight">
+			<input type="text" class="box nine">
+		</div>
+		
+	</main>
+	
+	<footer>
+	footer
+	</footer>
+		
+</div>    
 </body>
 </html>
