--- a/SignUp.html
+++ b/SignUp.html
@@ -10,30 +10,37 @@
 </head>
 <body style="background-color:rgb(231, 212, 187);">
 <section class="section2">
-<form>
-	<div class="signup_container">
-		<input type="text" id="name" placeholder="Enter Name" required>
-		<input type="email" id="email" placeholder="Enter Email" name="email" required>
+	<form action="validate.php" method="post">
+		<div class="signup_container">
+			<input type="text" id="myname" name="myname" placeholder="Enter Name" required>
+			<input type="email" id="email" placeholder="Enter Email" name="email" required autocomplete>
 
-		<input type="password" id="pass" placeholder="Enter Password" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2, 3}$" required>
+			<input type="password" id="mypass" name="mypass" placeholder="Enter Password" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2, 3}$" required>
 
-		<input type="password" id="pass" placeholder="Repeat Password" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2, 3}$" required>
+			<input type="password" id="mypass" name="mypass" placeholder="Repeat Password" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2, 3}$" required>
 
-			<span id="remember_forget">
-				<input type="checkbox" id="remember" checked="" ><label>Remember me </label>
-			</span>	
+				<span id="remember_forget">
+					<input type="checkbox" id="remember" checked="" ><label>Remember me </label>
+				</span>	
 
-		<p>By creating an account you agree to our <a href="#" >Terms & Privacy</a>.</p>
+			<p>By creating an account you agree to our <a href="#" >Terms & Privacy</a>.</p>
 
-		<div class="towbtn">
-		  <button onclick="document.location='First.html'" type="button" class="cancel">Cancel</button>
-		  <button type="submit" class="signup">Sign Up</button>
+			<div class="towbtn">
+			  <button type="button" class="cancel" onclick="document.location='First.html'" >Cancel</button>
+			  <button type="submit" class="signup" name="submit" value="Post" ><a href="Play.html" style="text-decoration: none; color:black;" >Sign Up</a></button>
+			</div>
+		
 		</div>
-	
-	</div>
 
-</form>
+	</form>
+	
 </section>
-    
+
+    <?php 
+   if (isset($_POST['submit']){ 
+      $p = $_POST['text']; 
+      //Anything can be done with the acquired data 
+   } 
+?> 
 </body>
 </html>
